Fix query-assist vertical overflow
Former-commit-id: 9381da5705518262f5a6b9e5b4d3883ab5f721fc

--- a/blocks/query-assist/_query-assist.scss
+++ b/blocks/query-assist/_query-assist.scss
@@ -1,5 +1,6 @@
 .ring-query-assist {
-  white-space: pre;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .ring-query-style_text {
